// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Archives component correctly 1`] = `
<section
  className="css-17kyktl e5hwpdc0"
>
  <article>
    <header
      className="css-1uaexsu e5hwpdc1"
    >
      <h2>
        <a
          className="css-jn1flh"
          href="/articles/archives"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          所有文章列表
        </a>
      </h2>
    </header>
    <table
      className="css-1l705iu e1szpz7p0"
    >
      <tbody
        className="css-17mjawo e1szpz7p1"
      >
        <tr
          className="css-fre9jl e1szpz7p2"
        >
          <td
            className="css-1do9apc e1szpz7p3"
          >
            2017/05/15
          </td>
          <td
            className="css-1do9apc e1szpz7p3"
          >
            <a
              className="css-f04ql"
              href="/articles/slug 1"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              title 1
            </a>
          </td>
        </tr>
        <tr
          className="css-fre9jl e1szpz7p2"
        >
          <td
            className="css-1do9apc e1szpz7p3"
          >
            2017/05/16
          </td>
          <td
            className="css-1do9apc e1szpz7p3"
          >
            <a
              className="css-f04ql"
              href="/articles/slug 2"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              title 2
            </a>
          </td>
        </tr>
        <tr
          className="css-fre9jl e1szpz7p2"
        >
          <td
            className="css-1do9apc e1szpz7p3"
          >
            2017/05/17
          </td>
          <td
            className="css-1do9apc e1szpz7p3"
          >
            <a
              className="css-f04ql"
              href="/articles/slug 3"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
            >
              title 3
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </article>
</section>
`;

exports[`It should render Archives component with empty articles correctly 1`] = `
<section
  className="css-17kyktl e5hwpdc0"
>
  <article>
    <header
      className="css-1uaexsu e5hwpdc1"
    >
      <h2>
        <a
          className="css-jn1flh"
          href="/articles/archives"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          所有文章列表
        </a>
      </h2>
    </header>
    <table
      className="css-1l705iu e1szpz7p0"
    >
      <tbody
        className="css-17mjawo e1szpz7p1"
      />
    </table>
  </article>
</section>
`;
